--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "kiritoEM",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
