--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,2 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+node_modules
 .env
-
